# Math-Problems

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
Differentiator/: .gitignore  Makefile  README.md
Differentiator/lib/: bin_tree.cpp  speaker.h
Encoder_Decoder/dnslib/: README.md
Encoder_Decoder/image_en-decoding/: README.md
EquationRunner/: README.md
Equations_Field/Differentiator/: TODO.md
Equations_Field/Equa_Plot/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp
ForscapEditor/: LICENSE  README.md
ForscapEditor/app/: symboltreeview.cpp
ForscapEditor/src/: forscape_serial_unicode.h
Fractal-gh/: README.md
Fractal-gh/app/: app.css  app.js  fractal.js
Joma/: LICENCE
Joma/benchmark/: main.cpp
Joma/docs/: Example.cpp  Guide.md
Joma/test/: TestGenerators.hpp  TestGeometry.cpp  TestIntersection.cpp  TestQuaternion.cpp  TestTransforms.cpp  main.cpp
Mandlebrot/Fractal-gh/: README.md  index.html
Mandlebrot/Mandelbrot-Coloring/: README.md
Mandlebrot/Mandelbrot-set-explorer/: README.md  framework.py  mandelbrot.py
Many-Objective-Cooperative-Bat-Searching-Algorithm/: .gitignore  README.md
Math_Chaos/Buddhabrot_Computation/: README.md
Math_Chaos/Chaos-Equations(Art)/: README.md
Math_Chaos/Chaos_Dotter/: index.html
Math_Chaos/Chaos_Patterns/: .gitignore
Math_Chaos/Clock_game_of_life/: README.md  main.js
Math_Chaos/GenePool/: README.md
Math_Chaos/Gravity_Particles/: README.md
Math_Chaos/LeaPHI/: .gitignore  CMakeLists.txt  LeaPHI  README.md  run
Math_Chaos/LeaPHI/inc/: bezier_curve.hpp  camera.hpp  color_cube.hpp  geometry.hpp  global.hpp  icu.hpp  leaf.hpp  mesh.hpp  object3D.hpp  shader.hpp  triangle_wrapper.hpp  util.hpp  window.hpp
Math_Chaos/LeaPHI/lib/ImGui/: CMakeLists.txt
Math_Chaos/LeaPHI/lib/Triangle/: triangle.h
Math_Chaos/LeaPHI/res/shaders/: basic.frag  basic.vert
Math_Chaos/LeaPHI/src/: bezier_curve.cpp  camera.cpp  color_cube.cpp  geometry.cpp  icu.cpp  leaf.cpp  main.cpp  mesh.cpp  object3D.cpp  shader.cpp  triangle_wrapper.cpp  util.cpp  window.cpp
Math_Chaos/Lenia/: README.md
Math_Chaos/Lorenz-Attractor/: README.md  drawing.cpp  drawing.h  main.cpp  solver.cpp  solver.h  vbo.cpp  vbo.h
Math_Chaos/PL_unique_math/: particle_life.py  particle_life_3d.html
Math_Chaos/Particle_Life/: .gitignore  README.md  settings.gradle
Math_Chaos/PerlinNoise/: PerlinNoise.hpp  README.md
Math_Chaos/Primordial-Particle-System/: PPS.js  PPSv1.0.html  PPSv5.2.html  PPSv5.js  README.md  style.css
Math_Chaos/Theories_Visuals/: .gitignore  2D_Lorenz_Attractor.py  2D_lorenzattractor.py  2d.ipynb  3D_Lorenz_Attractor.py  3d.ipynb  README.md  logisticmap.ipynb  logisticmap.py  parameters.py
Math_Chaos/physarum/: README.md  go.mod  go.sum
Metaheuristic-Flower_Pollination_Algorithm/: MH_flower_pollination_algorithm.py  README.md
Number_Theory/: CMakeLists.txt  Euler_totient.cpp  Inverse_from_fermet.cpp  Matrix_exponentiation.cpp  Prime.cpp  README.md  deploy.sh  design.md  instruction.md  matrix_exponentiation.cpp  modular_exponentiation.cpp
Number_Theory/NUMBER THEORY PROBLEMS/: GCD2.cpp  GCD_Extreme.cpp  N-Factorful.cpp  SPOJ_LcmSum.cpp  SegmentedSeive.cpp  StrangeOrder.cpp  cubefr.cpp  fantastic_sets.cpp  ibra_nuclear_reactor.cpp
Number_Theory/NumberTheoryGUI/: CMakeLists.txt
Number_Theory/NumberTheoryGUI/.github/workflows/: ci.yml
Number_Theory/NumberTheoryGUI/resources/: styles.qss
Number_Theory/NumberTheoryGUI/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Number_Theory/NumberTheoryGUI/src/core/: NumberTheoryEngine.cpp  NumberTheoryEngine.h
Number_Theory/NumberTheoryGUI/src/widgets/: SettingsWidget.h
Number_Theory/algorithms/: (GCD)-Euclied.cpp  (GCD)-extended_Euclied.cpp  Euler_totient.cpp  Inverse_from_fermet.cpp  PrimesSeive.cpp  SegmentedSeive.cpp  Seive_function.cpp  modular_exponentiation.cpp  multiplicative_modulo_inverse.cpp
Number_Theory/resources/: resources.qrc
Number_Theory/src/: MainWindow.h  main.cpp
Number_Theory/tests/: test_mainwindow.cpp
ParticleUniverse/: README.md
PySpace/: README.md  Run.bat  ray_marcher_demo.py
PySpace/pyspace/: camera.py  coloring.py  fold.py  geo.py  object.py  shader.py  util.py
Security_Algorithms/Cryptographic_Clang/: README.md  bignum.c
Security_Algorithms/Cryptography-Analysis/: CMakeLists.txt  LICENSE  PerformanceAnalysis.md  README.md  measure_performance.c  measure_performance.h  utils.c  utils.h
Security_Algorithms/Cryptography-Analysis/ECC/: ECC.csv  ECC_results.txt  main.c
Security_Algorithms/Cryptography-Analysis/KEM/: BIKE.c  BIKE_performance_metrics.csv  BIKE_results  FrodoKEM.c  FrodoKEM_results  Kyber_results  NTRU.c  NTRU_results  frodoKEM_performance_metrics.csv  kem.c  kem.h  kyber.c  kyber_means.csv  kyber_performance_metrics.csv  ntru_performance_metrics.csv
Security_Algorithms/Cryptography-Analysis/RSA/: RSA_results  main.c  rsa.c  rsa.h  rsa_performance_metrics.csv
Security_Algorithms/Cryptography-Analysis/Signature_Schemes/: CRYSTALS-Dilithium.c  CRYSTALS-Dilithium_results  CRYSTALS_Dilithium_Results.csv  Falcon.c  Falcon_Results.csv  Falcon_results  signature.c  signature.h
Security_Algorithms/Cryptography_algortihms/: setup.py
Security_Algorithms/ReverseGadgetCipher/: build.py  factory.py  main.py  main.ts  publish.py
Security_Algorithms/SOLvatore/: LICENSE  README.md  analysis_mibs.py  analysis_optimal.py  analysis_present.py  analysis_skinny.py  cipher_description.py  solvatore.py
Sorting_algorithms_Visualization/: README.md  SortingVisualization.pro
Sorting_algorithms_Visualization/src/: algorithms.cpp  main.cpp  visualization.cpp
Sparse_Matrix/: README.md
Unique_Algorithms/FireflyAlgorithm/: FireflyAlgorithm.py
Unique_Algorithms/Many-Objective-Cooperative-Bat-Searching/: Objective.py
Unique_Algorithms/Many_Objective_Cooperative_Bat_Searching/: Bat.py  EA.py  Main.py  Objective.py  README.md  (+1 more)
differentiator/: README.md  TODO.md
docs/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
tests/: test_logic_crash.py
(+318 files in other folders)
