CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

PROJECT(LeaPHI)
SUBDIRS(lib/ImGui)

SET(source_dir "${PROJECT_SOURCE_DIR}/src/")
SET(exec_name "LeaPHI")

FILE(GLOB source_files "${source_dir}/*.cpp")

# +=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+
SET(OpenGL_GL_PREFERENCE "GLVND")
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)
FIND_PATH(GLM_INCLUDE_DIR glm/glm.hpp HINTS /usr/include /usr/local/include /opt/local/include)

# compiler settings
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -std=c++17")

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/ImGui)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib/Triangle)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)

LINK_LIBRARIES(${GLEW_LIBRARIES})
LINK_LIBRARIES(${OPENGL_LIBRARIES})
LINK_LIBRARIES(glfw)

ADD_EXECUTABLE(${exec_name} ${source_files})
TARGET_LINK_LIBRARIES(${exec_name} ImGui)
TARGET_LINK_LIBRARIES(${exec_name} ${CMAKE_CURRENT_SOURCE_DIR}/lib/Triangle/triangle.o)
